--- a/.github/workflows/CreateReports.yml
+++ b/.github/workflows/CreateReports.yml
@@ -53,7 +53,7 @@ jobs:
         cc: reslirocker@gmail.com  # Added CC recipient
         from: ${{ secrets.EMAIL_FROM }}
         subject: ${{ github.event.inputs.email_subject }}
-        body: |
+        body:
           Dear Client,
           We hope this message finds you well.
 
