--- a/.github/workflows/CreateReports.yml
+++ b/.github/workflows/CreateReports.yml
@@ -49,8 +49,8 @@ jobs:
         server_port: 587
         username: ${{ secrets.EMAIL_USERNAME }}
         password: ${{ secrets.EMAIL_PASSWORD }}
-        to: ${{ secrets.CLIENT_EMAIL }}
-        cc: reslirocker@gmail.com
+        to: reslirocker@gmail.com
+        cc: ${{ secrets.CLIENT_EMAIL }}
         from: ${{ secrets.EMAIL_FROM }}
         subject: ${{ github.event.inputs.email_subject }}
         body: |
